--- a/plugin.xml
+++ b/plugin.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <plugin xmlns="http://www.phonegap.com/ns/plugins/1.0"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    id="at.modalog.cordova.plugin.cache"
+    id="com.scala.cordova.plugin.cache"
     version="1.1.0">
 
     <name>Cache</name>
-    <repo>https://github.com/moderna/cordova-plugin-cache.git</repo>
+    <repo>https://github.com/ScalaInc/cordova-plugin-cache.git</repo>
     <keywords>webview,cache,clear,android,ios</keywords>
     <license>MIT</license>
-    <author>Modern Alchemists OG</author>
+    <author>Scala Inc</author>
     <description>
       &lt;p&gt;This is a WebView cache plugin for Cordova 6.1.1+ supporting Android (>=4.1) and iOS(>=6.0). It allows to clear the cordova webview cache.&lt;/p&gt;
     </description>
@@ -21,11 +21,11 @@
     <platform name="android">
         <config-file target="res/xml/config.xml" parent="/*">
             <feature name="Cache" >
-                <param name="android-package" value="at.modalog.cordova.plugin.cache.Cache"/>
+                <param name="android-package" value="com.scala.cordova.plugin.cache.Cache"/>
             </feature>
         </config-file>
 
-        <source-file src="src/android/Cache.java" target-dir="src/at/modalog/cordova/plugin/cache" />
+        <source-file src="src/android/Cache.java" target-dir="src/com/scala/cordova/plugin/cache" />
     </platform>
     
     <!-- ios -->
