--- a/plugin.xml
+++ b/plugin.xml
@@ -13,6 +13,10 @@
       &lt;p&gt;This is a WebView cache plugin for Cordova 6.1.1+ supporting Android (>=4.1) and iOS(>=6.0). It allows to clear the cordova webview cache.&lt;/p&gt;
     </description>
 
+    <engines>
+        <engine name="cordova-android" version=">=3.6.0" /><!-- Requires CordovaPlugin.preferences -->
+    </engines>
+
     <js-module src="www/Cache.js" name="Cache">
         <clobbers target="cache" /><!-- will be available under window.cache -->
     </js-module>
